# tech-skills

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README_director_compensation.md  README_stock_prices.md  README_tickers.md  STUCK_FILING_INVESTIGATION.md  add_gender_column.sql  ask_openai_bulk.py  batch_response_parser.py  batchcheck.py  batchfetch.py  board_stock_analysis.py  boards_website_generator.py  clear_director_batch.py  compensation_batch_check.py  create_prompt.py  diagnose_error_batches.py  director_compensation_schema.sql  director_information_table.py  director_name_handling.py  early-exploratory.ipynb  envsetup.sh  etl.sql  eveningcron.sh  every_sentence.py  every_textual.py  extract_director_compensation.py  extract_latest_accessions.py  extract_tables.py  extract_tickers.py  fetch_all_sectors.py  fetch_forms_from_edgar.py  fetch_prices_for_director_filings.py  fetch_sector.py  get_cikcodes.py  get_company.py  get_doc.py  get_stock_price.py  (+33 more)
boards-website/: .gitignore
documentation/: director_name_resolution.md  project_presentation.tex
mock_psycopg2/: __init__.py
prompts/generation2/: 001_preamble.txt  003_task.txt  005_director_instructions.txt  setup.sh
prompts/initial-prototype-1/: 001_prefix.txt  setup.sh
tests/: test_batch_response_parser.py  test_fetch_sector.py  test_openai_key.py
yfinance/: __init__.py
yfinance_stub/: __init__.py
