[project]
name = "tech-skills"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "jinja2>=3.1.6",
    "lxml>=5.3.2",
    "openai>=1.72.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "yfinance>=0.2.37",
    "scikit-learn>=1.4.2",
    "scipy>=1.13.0",
]
